github pages release

--- a/interfaces/objectofbazletnuj56.html
+++ b/interfaces/objectofbazletnuj56.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>ObjectOfBazX101YId8 | @open-rpc/schema-utils-js</title>
+	<title>ObjectOfBazLEtnUJ56 | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="objectofbazx101yid8.html">ObjectOfBazX101YId8</a>
+					<a href="objectofbazletnuj56.html">ObjectOfBazLEtnUJ56</a>
 				</li>
 			</ul>
-			<h1>Interface ObjectOfBazX101YId8</h1>
+			<h1>Interface ObjectOfBazLEtnUJ56</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">ObjectOfBazX101YId8</span>
+						<span class="target">ObjectOfBazLEtnUJ56</span>
 					</li>
 				</ul>
 			</section>
@@ -83,7 +83,7 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="objectofbazx101yid8.html#ripslip" class="tsd-kind-icon">ripslip</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="objectofbazletnuj56.html#notfoo" class="tsd-kind-icon">Not<wbr>Foo</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,12 +92,12 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="ripslip" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> ripslip</h3>
-					<div class="tsd-signature tsd-kind-icon">ripslip<span class="tsd-signature-symbol">:</span> <a href="../globals.html#baz" class="tsd-signature-type">Baz</a></div>
+					<a name="notfoo" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> Not<wbr>Foo</h3>
+					<div class="tsd-signature tsd-kind-icon">Not<wbr>Foo<span class="tsd-signature-symbol">:</span> <a href="../globals.html#baz" class="tsd-signature-type">Baz</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/duplicate-names.ts#L4">src/integration-tests/results/ts/duplicate-names.ts:4</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/duplicate-names.ts#L4">src/integration-tests/expecteds/ts/duplicate-names.ts:4</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -116,10 +116,10 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="objectofbazx101yid8.html" class="tsd-kind-icon">Object<wbr>OfBaz<wbr>X101YId8</a>
+						<a href="objectofbazletnuj56.html" class="tsd-kind-icon">Object<wbr>OfBazLEtnUJ56</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="objectofbazx101yid8.html#ripslip" class="tsd-kind-icon">ripslip</a>
+								<a href="objectofbazletnuj56.html#notfoo" class="tsd-kind-icon">Not<wbr>Foo</a>
 							</li>
 						</ul>
 					</li>
