--- a/interfaces/streetname.html
+++ b/interfaces/streetname.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Skiperydippery | @open-rpc/schema-utils-js</title>
+	<title>StreetName | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="skiperydippery.html">Skiperydippery</a>
+					<a href="streetname.html">StreetName</a>
 				</li>
 			</ul>
-			<h1>Interface Skiperydippery</h1>
+			<h1>Interface StreetName</h1>
 		</div>
 	</div>
 </header>
@@ -68,46 +68,13 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Skiperydippery</span>
+						<span class="target">StreetName</span>
 					</li>
 				</ul>
 			</section>
-			<section class="tsd-panel-group tsd-index-group">
-				<h2>Index</h2>
-				<section class="tsd-panel tsd-index-panel">
-					<div class="tsd-index-content">
-						<section class="tsd-index-section ">
-							<h3>Properties</h3>
-							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="skiperydippery.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="skiperydippery.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a></li>
-							</ul>
-						</section>
-					</div>
-				</section>
-			</section>
-			<section class="tsd-panel-group tsd-member-group ">
-				<h2>Properties</h2>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="fooberdoober" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> fooberdoober</h3>
-					<div class="tsd-signature tsd-kind-icon">fooberdoober<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bop" class="tsd-signature-type">Bop</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/complex.ts#L33">src/integration-tests/results/ts/complex.ts:33</a></li>
-						</ul>
-					</aside>
-				</section>
-				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="gibbledybits" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> gibbledybits</h3>
-					<div class="tsd-signature tsd-kind-icon">gibbledybits<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bopskippity" class="tsd-signature-type">Bopskippity</a></div>
-					<aside class="tsd-sources">
-						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/complex.ts#L34">src/integration-tests/results/ts/complex.ts:34</a></li>
-						</ul>
-					</aside>
-				</section>
+			<section class="tsd-panel tsd-kind-interface">
+				<h3 class="tsd-before-signature">Indexable</h3>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -123,15 +90,7 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="skiperydippery.html" class="tsd-kind-icon">Skiperydippery</a>
-						<ul>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="skiperydippery.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a>
-							</li>
-							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="skiperydippery.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a>
-							</li>
-						</ul>
+						<a href="streetname.html" class="tsd-kind-icon">Street<wbr>Name</a>
 					</li>
 				</ul>
 				<ul class="after-current">
