--- a/interfaces/washequipment.html
+++ b/interfaces/washequipment.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Floopdidoop | @open-rpc/schema-utils-js</title>
+	<title>WashEquipment | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="floopdidoop.html">Floopdidoop</a>
+					<a href="washequipment.html">WashEquipment</a>
 				</li>
 			</ul>
-			<h1>Interface Floopdidoop</h1>
+			<h1>Interface WashEquipment</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Floopdidoop</span>
+						<span class="target">WashEquipment</span>
 					</li>
 				</ul>
 			</section>
@@ -79,8 +79,8 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="floopdidoop.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="floopdidoop.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="washequipment.html#soap" class="tsd-kind-icon">soap</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="washequipment.html#water" class="tsd-kind-icon">water</a></li>
 							</ul>
 						</section>
 					</div>
@@ -89,22 +89,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="fooberdoober" class="tsd-anchor"></a>
-					<h3>fooberdoober</h3>
-					<div class="tsd-signature tsd-kind-icon">fooberdoober<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bop" class="tsd-signature-type">Bop</a></div>
+					<a name="soap" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> soap</h3>
+					<div class="tsd-signature tsd-kind-icon">soap<span class="tsd-signature-symbol">:</span> <a href="../globals.html#soapbrand" class="tsd-signature-type">SoapBrand</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/complex.ts#L29">src/integration-tests/results/ts/complex.ts:29</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/complex.ts#L34">src/integration-tests/expecteds/ts/complex.ts:34</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="gibbledybits" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> gibbledybits</h3>
-					<div class="tsd-signature tsd-kind-icon">gibbledybits<span class="tsd-signature-symbol">:</span> <a href="../globals.html#bopskippity" class="tsd-signature-type">Bopskippity</a></div>
+					<a name="water" class="tsd-anchor"></a>
+					<h3>water</h3>
+					<div class="tsd-signature tsd-kind-icon">water<span class="tsd-signature-symbol">:</span> <a href="../globals.html#waterliters" class="tsd-signature-type">WaterLiters</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/complex.ts#L30">src/integration-tests/results/ts/complex.ts:30</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/complex.ts#L33">src/integration-tests/expecteds/ts/complex.ts:33</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -123,13 +123,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="floopdidoop.html" class="tsd-kind-icon">Floopdidoop</a>
+						<a href="washequipment.html" class="tsd-kind-icon">Wash<wbr>Equipment</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="floopdidoop.html#fooberdoober" class="tsd-kind-icon">fooberdoober</a>
+								<a href="washequipment.html#soap" class="tsd-kind-icon">soap</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="floopdidoop.html#gibbledybits" class="tsd-kind-icon">gibbledybits</a>
+								<a href="washequipment.html#water" class="tsd-kind-icon">water</a>
 							</li>
 						</ul>
 					</li>
