--- a/interfaces/moebiusschema.html
+++ b/interfaces/moebiusschema.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Doppler | @open-rpc/schema-utils-js</title>
+	<title>MoebiusSchema | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="doppler.html">Doppler</a>
+					<a href="moebiusschema.html">MoebiusSchema</a>
 				</li>
 			</ul>
-			<h1>Interface Doppler</h1>
+			<h1>Interface MoebiusSchema</h1>
 		</div>
 	</div>
 </header>
@@ -68,13 +68,39 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Doppler</span>
+						<span class="target">MoebiusSchema</span>
 					</li>
 				</ul>
 			</section>
 			<section class="tsd-panel tsd-kind-interface">
 				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>key: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
+				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
+			</section>
+			<section class="tsd-panel-group tsd-index-group">
+				<h2>Index</h2>
+				<section class="tsd-panel tsd-index-panel">
+					<div class="tsd-index-content">
+						<section class="tsd-index-section ">
+							<h3>Properties</h3>
+							<ul class="tsd-index-list">
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="moebiusschema.html#moebiusproperty" class="tsd-kind-icon">Moebius<wbr>Property</a></li>
+							</ul>
+						</section>
+					</div>
+				</section>
+			</section>
+			<section class="tsd-panel-group tsd-member-group ">
+				<h2>Properties</h2>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="moebiusproperty" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> Moebius<wbr>Property</h3>
+					<div class="tsd-signature tsd-kind-icon">Moebius<wbr>Property<span class="tsd-signature-symbol">:</span> <a href="moebiusschema.html" class="tsd-signature-type">MoebiusSchema</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/circular-reference.ts#L2">src/integration-tests/expecteds/ts/circular-reference.ts:2</a></li>
+						</ul>
+					</aside>
+				</section>
 			</section>
 		</div>
 		<div class="col-4 col-menu menu-sticky-wrap menu-highlight">
@@ -90,7 +116,12 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="doppler.html" class="tsd-kind-icon">Doppler</a>
+						<a href="moebiusschema.html" class="tsd-kind-icon">Moebius<wbr>Schema</a>
+						<ul>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="moebiusschema.html#moebiusproperty" class="tsd-kind-icon">Moebius<wbr>Property</a>
+							</li>
+						</ul>
 					</li>
 				</ul>
 				<ul class="after-current">
