--- a/interfaces/sinklocation.html
+++ b/interfaces/sinklocation.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>CircularRefs | @open-rpc/schema-utils-js</title>
+	<title>SinkLocation | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="circularrefs.html">CircularRefs</a>
+					<a href="sinklocation.html">SinkLocation</a>
 				</li>
 			</ul>
-			<h1>Interface CircularRefs</h1>
+			<h1>Interface SinkLocation</h1>
 		</div>
 	</div>
 </header>
@@ -68,13 +68,9 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">CircularRefs</span>
+						<span class="target">SinkLocation</span>
 					</li>
 				</ul>
-			</section>
-			<section class="tsd-panel tsd-kind-interface">
-				<h3 class="tsd-before-signature">Indexable</h3>
-				<div class="tsd-signature tsd-kind-icon"><span class="tsd-signature-symbol">[</span>k: <span class="tsd-signature-type">string</span><span class="tsd-signature-symbol">]: </span><span class="tsd-signature-type">any</span></div>
 			</section>
 			<section class="tsd-panel-group tsd-index-group">
 				<h2>Index</h2>
@@ -83,7 +79,8 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="circularrefs.html#lefoo" class="tsd-kind-icon">Le<wbr>Foo</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="sinklocation.html#residencenumber" class="tsd-kind-icon">residence<wbr>Number</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="sinklocation.html#residencestreet" class="tsd-kind-icon">residence<wbr>Street</a></li>
 							</ul>
 						</section>
 					</div>
@@ -92,12 +89,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="lefoo" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> Le<wbr>Foo</h3>
-					<div class="tsd-signature tsd-kind-icon">Le<wbr>Foo<span class="tsd-signature-symbol">:</span> <a href="circularrefs.html" class="tsd-signature-type">CircularRefs</a></div>
+					<a name="residencenumber" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> residence<wbr>Number</h3>
+					<div class="tsd-signature tsd-kind-icon">residence<wbr>Number<span class="tsd-signature-symbol">:</span> <a href="../globals.html#streetnumber" class="tsd-signature-type">StreetNumber</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/circular-reference.ts#L2">src/integration-tests/results/ts/circular-reference.ts:2</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/complex.ts#L46">src/integration-tests/expecteds/ts/complex.ts:46</a></li>
+						</ul>
+					</aside>
+				</section>
+				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
+					<a name="residencestreet" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> residence<wbr>Street</h3>
+					<div class="tsd-signature tsd-kind-icon">residence<wbr>Street<span class="tsd-signature-symbol">:</span> <a href="streetname.html" class="tsd-signature-type">StreetName</a></div>
+					<aside class="tsd-sources">
+						<ul>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/complex.ts#L45">src/integration-tests/expecteds/ts/complex.ts:45</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -116,10 +123,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="circularrefs.html" class="tsd-kind-icon">Circular<wbr>Refs</a>
+						<a href="sinklocation.html" class="tsd-kind-icon">Sink<wbr>Location</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="circularrefs.html#lefoo" class="tsd-kind-icon">Le<wbr>Foo</a>
+								<a href="sinklocation.html#residencenumber" class="tsd-kind-icon">residence<wbr>Number</a>
+							</li>
+							<li class=" tsd-kind-property tsd-parent-kind-interface">
+								<a href="sinklocation.html#residencestreet" class="tsd-kind-icon">residence<wbr>Street</a>
 							</li>
 						</ul>
 					</li>
