--- a/interfaces/sinkuser.html
+++ b/interfaces/sinkuser.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
-	<title>Bonkiedonky | @open-rpc/schema-utils-js</title>
+	<title>SinkUser | @open-rpc/schema-utils-js</title>
 	<meta name="description" content="">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="../assets/css/main.css">
@@ -54,10 +54,10 @@
 					<a href="../globals.html">Globals</a>
 				</li>
 				<li>
-					<a href="bonkiedonky.html">Bonkiedonky</a>
+					<a href="sinkuser.html">SinkUser</a>
 				</li>
 			</ul>
-			<h1>Interface Bonkiedonky</h1>
+			<h1>Interface SinkUser</h1>
 		</div>
 	</div>
 </header>
@@ -68,7 +68,7 @@
 				<h3>Hierarchy</h3>
 				<ul class="tsd-hierarchy">
 					<li>
-						<span class="target">Bonkiedonky</span>
+						<span class="target">SinkUser</span>
 					</li>
 				</ul>
 			</section>
@@ -79,8 +79,8 @@
 						<section class="tsd-index-section ">
 							<h3>Properties</h3>
 							<ul class="tsd-index-list">
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="bonkiedonky.html#badmirputin" class="tsd-kind-icon">badmirputin</a></li>
-								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="bonkiedonky.html#shopper" class="tsd-kind-icon">shopper</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="sinkuser.html#hands" class="tsd-kind-icon">hands</a></li>
+								<li class="tsd-kind-property tsd-parent-kind-interface"><a href="sinkuser.html#name" class="tsd-kind-icon">name</a></li>
 							</ul>
 						</section>
 					</div>
@@ -89,22 +89,22 @@
 			<section class="tsd-panel-group tsd-member-group ">
 				<h2>Properties</h2>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="badmirputin" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> badmirputin</h3>
-					<div class="tsd-signature tsd-kind-icon">badmirputin<span class="tsd-signature-symbol">:</span> <a href="../globals.html#gorbelchov" class="tsd-signature-type">Gorbelchov</a></div>
+					<a name="hands" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> hands</h3>
+					<div class="tsd-signature tsd-kind-icon">hands<span class="tsd-signature-symbol">:</span> <a href="../globals.html#sinkusernumhands" class="tsd-signature-type">SinkUserNumHands</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/complex.ts#L40">src/integration-tests/results/ts/complex.ts:40</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/complex.ts#L39">src/integration-tests/expecteds/ts/complex.ts:39</a></li>
 						</ul>
 					</aside>
 				</section>
 				<section class="tsd-panel tsd-member tsd-kind-property tsd-parent-kind-interface">
-					<a name="shopper" class="tsd-anchor"></a>
-					<h3><span class="tsd-flag ts-flagOptional">Optional</span> shopper</h3>
-					<div class="tsd-signature tsd-kind-icon">shopper<span class="tsd-signature-symbol">:</span> <a href="doppler.html" class="tsd-signature-type">Doppler</a></div>
+					<a name="name" class="tsd-anchor"></a>
+					<h3><span class="tsd-flag ts-flagOptional">Optional</span> name</h3>
+					<div class="tsd-signature tsd-kind-icon">name<span class="tsd-signature-symbol">:</span> <a href="../globals.html#sinkusername" class="tsd-signature-type">SinkUserName</a></div>
 					<aside class="tsd-sources">
 						<ul>
-							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/942a4b0/src/integration-tests/results/ts/complex.ts#L39">src/integration-tests/results/ts/complex.ts:39</a></li>
+							<li>Defined in <a href="https://github.com/etclabscore/json-schema-to-types/blob/e8c56e5/src/integration-tests/expecteds/ts/complex.ts#L40">src/integration-tests/expecteds/ts/complex.ts:40</a></li>
 						</ul>
 					</aside>
 				</section>
@@ -123,13 +123,13 @@
 				</ul>
 				<ul class="current">
 					<li class="current tsd-kind-interface">
-						<a href="bonkiedonky.html" class="tsd-kind-icon">Bonkiedonky</a>
+						<a href="sinkuser.html" class="tsd-kind-icon">Sink<wbr>User</a>
 						<ul>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="bonkiedonky.html#badmirputin" class="tsd-kind-icon">badmirputin</a>
+								<a href="sinkuser.html#hands" class="tsd-kind-icon">hands</a>
 							</li>
 							<li class=" tsd-kind-property tsd-parent-kind-interface">
-								<a href="bonkiedonky.html#shopper" class="tsd-kind-icon">shopper</a>
+								<a href="sinkuser.html#name" class="tsd-kind-icon">name</a>
 							</li>
 						</ul>
 					</li>
